@@ -2,7 +2,9 @@
     function (x) 
 {
     w <- weights(x)
-    wa <- x$CCA$wa
+    k <- !is.na(w)
+    w <- w[k]
+    wa <- x$CCA$wa[k,]
     wa <- sweep(wa, 1, sqrt(w), "*")
     X <- qr.X(x$CCA$QR)
     colnames(X) <- colnames(X)[x$CCA$QR$pivot]
